clusters/k3s-home/infrastructure-runtime/04-gateway/namespace.yaml
# clusters/k3s-home/infrastructure/04-gateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: networking
