clusters/k3s-home/infrastructure-runtime/04-gateway/gateway.yaml
# clusters/k3s-home/infrastructure/04-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main-gateway
  namespace: networking
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.fletcherlabs.net"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.fletcherlabs.net"
      tls:
        mode: Terminate
        certificateRefs:
        - name: wildcard-fletcherlabs-net-tls
          kind: Secret
      allowedRoutes:
        namespaces:
          from: All
